# CV-Project-SLAM

./: .gitignore  README.md
cv_proj_godot/: project.godot  rust-utils.gdextension
cv_proj_godot/assets/: grid_tile.gdshader  grid_tile_material.tres  icon.svg.import  visible_occluded_material.tres
cv_proj_godot/scenes/: TurtleBot.tscn  clear_map_button.gd  compare_button.gd  das34CC.tmp  dasCEC.tmp  dashboard.tscn  grid_map.tscn  lidar_preview.tscn  location_label.gd  normals_button.gd  occupancy_map_visualizer.gd  point_world.tscn  replay.gd  slam_gd.gd  test_env_1.tscn
cv_proj_godot/scripts/: compute_transform_button.gd  control_multimesh_test.gd  controller.gd  environment_nodes.gd  grid_map_test.gd  icp.gd  lidar.gd  lidar_preview.gd  take_snapshot_button.gd  tb_movement_controller.gd  tb_nodes.gd
cv_proj_rust/: .gitignore  Cargo.toml
cv_proj_rust/python/: icp.ipynb
cv_proj_rust/src/: icp.rs  lib.rs  occupancy_map.rs  occupancy_map_visualizer.rs
